# veneer-theme

./: Cargo.toml  README.md
.zed/: tasks.json
src/: cli.rs  main.rs  palette.rs  render.rs  show.rs
