[package]
name = "veneer-theme"
version = "0.1.0"
edition = "2024"
description = "Theme generator tool"
repository = "https://github.com/ascarter/veneer-theme"
readme = "README.md"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "veneer"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tera = "1.20"
toml = "0.8"
walkdir = "2"
regex = "1"
serde_json = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
